src/objects/BFM_Withhold_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <label>Carrier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Withhold Taxes (Carrier Account)</relationshipLabel>
        <relationshipName>Withhold_Taxs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilever_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unilever Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Withhold Taxes (Unilever Account)</relationshipLabel>
        <relationshipName>Withhold_Taxs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Code__c</fullName>
        <label>Withholding Tax Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Withholding Tax Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Text__c</fullName>
        <label>Withholding Tax Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Type__c</fullName>
        <label>Withholding Tax Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Withhold Tax</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Withold_Tax_View</fullName>
        <columns>NAME</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Unilever_Account__c</columns>
        <columns>Withholding_Tax_Code__c</columns>
        <columns>Withholding_Tax_Flag__c</columns>
        <columns>Withholding_Tax_Text__c</columns>
        <columns>Withholding_Tax_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Withold Tax View</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>WHT-{00000}</displayFormat>
        <label>Withhold Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Withhold Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>